--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>E-Spot Movies</title>
+    <link href="style.css" rel="stylesheet">
+    <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <header>
+        <a href="#"><h1>E-Spot Movies</h1></a>
+        <form id="form">
+            <input 
+                class="search"
+                type="text"
+                id="search" 
+                placeholders="search">
+        </form>
+    </header>
 </body>
 </html>
