--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
         <a href="#"><h1>E-Spot Movies</h1></a>
         <form id="form">
             <input 
-                class="search"
-                type="text"
-                id="search" 
-                placeholders="search">
+                class="search" type="text" id="search" placeholders="search">
         </form>
     </header>
 </body>
