--- a/index.html
+++ b/index.html
@@ -16,5 +16,7 @@
                 class="search" type="text" id="search" placeholders="search">
         </form>
     </header>
+    <main id="main"></main>
+    
 </body>
 </html>
