--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
                 class="search" type="text" id="search" placeholders="search">
         </form>
     </header>
-    <main id="main"></main>
+    <main 
+     id="main"> 
+
+    </main>
     
 </body>
 </html>
